--- a/test/fixtures/revisions.yml
+++ b/test/fixtures/revisions.yml
@@ -1,6 +1,84 @@
 home_page_first_revision:
   id: 1
-  created_at: 2004-08-01
-  updated_at: 2005-08-01
+  created_at: <%= Time.local(2004, 4, 4, 15, 50).to_formatted_s(:db) %>
+  updated_at: <%= Time.local(2004, 4, 4, 15, 50).to_formatted_s(:db) %>
   page_id: 1
-  content: some text
+  number: 1
+  content: First revision of the HomePage end
+  author: AnAuthor
+  ip: 127.0.0.1
+  
+my_way_first_revision:
+  id: 2
+  created_at: <%= 9.days.ago.to_formatted_s(:db) %>
+  updated_at: <%= 9.days.ago.to_formatted_s(:db) %>
+  page_id: 2
+  number: 1
+  content: MyWay
+  author: Me
+
+smart_engine_first_revision:
+  id: 3
+  created_at: <%= 8.days.ago.to_formatted_s(:db) %>
+  updated_at: <%= 8.days.ago.to_formatted_s(:db) %>
+  page_id: 3
+  number: 1
+  content: SmartEngine
+  author: Me
+
+that_way_first_revision:
+  id: 4
+  created_at: <%= 7.days.ago.to_formatted_s(:db) %>
+  updated_at: <%= 7.days.ago.to_formatted_s(:db) %>
+  page_id: 4
+  number: 1
+  content: ThatWay
+  author: Me
+
+no_wiki_word_first_revision:
+  id: 5
+  created_at: <%= 6.days.ago.to_formatted_s(:db) %>
+  updated_at: <%= 6.days.ago.to_formatted_s(:db) %>
+  page_id: 5
+  number: 1
+  content: hey you
+  author: Me
+  
+home_page_second_revision:
+  id: 6
+  created_at: <%= Time.local(2004, 4, 4, 16, 50).to_formatted_s(:db) %>
+  updated_at: <%= Time.local(2004, 4, 4, 16, 50).to_formatted_s(:db) %>
+  page_id: 1
+  number: 2
+  content: HisWay would be MyWay in kinda ThatWay in HisWay though MyWay \OverThere -- see SmartEngine in that SmartEngineGUI
+  author: DavidHeinemeierHansson
+  
+first_page_first_revision:
+  id: 7
+  created_at: <%= Time.local(2004, 4, 4, 16, 55).to_formatted_s(:db) %>
+  updated_at: <%= Time.local(2004, 4, 4, 16, 55).to_formatted_s(:db) %>
+  page_id: 6
+  number: 1
+  content: HisWay would be MyWay in kinda ThatWay in HisWay though MyWay \\OverThere -- see SmartEngine in that SmartEngineGUI
+  author: DavidHeinemeierHansson
+  
+oak_first_revision:
+  id: 8
+  created_at: <%= 5.days.ago.to_formatted_s(:db) %>
+  updated_at: <%= 5.days.ago.to_formatted_s(:db) %>
+  page_id: 7
+  number: 1
+  content: "All about oak.\ncategory: trees"
+  author: TreeHugger
+  ip: 127.0.0.2
+
+elephant_first_revision:
+  id: 9
+  created_at: <%= 10.minutes.ago.to_formatted_s(:db) %>
+  updated_at: <%= 10.minutes.ago.to_formatted_s(:db) %>
+  page_id: 8
+  number: 1
+  content: "All about elephants.\ncategory: animals"
+  author: Guest
+  ip: 127.0.0.2
+
