CSS tweaks around page editing
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@467 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,7 @@
 development:
   adapter: mysql
   host: localhost
+  socket: /var/run/mysqld/mysqld.sock
   database: instiki_dev
   username: root
   password:
@@ -8,6 +9,7 @@ development:
 test:
   adapter: mysql
   host: localhost
+  socket: /var/run/mysqld/mysqld.sock
   database: instiki_test
   username: root
   password:
