reverted to rails 1.1.6 since there were problems reported
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@509 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,31 +1,38 @@
-development:
-  adapter: mysql
-  host: localhost
-  socket: /var/run/mysqld/mysqld.sock
-  database: instiki_dev
-  username: root
-  password:
-
-test:
-  adapter: mysql
-  host: localhost
-  socket: /var/run/mysqld/mysqld.sock
-  database: instiki_test
-  username: root
-  password:
 
 # "Out of the box", Instiki stores it's data in sqlite3 database. Other options are listed below.
+
+development:
+    adapter: sqlite3
+    database: db/development.db.sqlite3
+
+test:
+    adapter: sqlite3
+    database: db/test.db.sqlite3
+
 production:
   adapter: sqlite3
   database: db/production.db.sqlite3
   
 # MySQL (default setup).  Versions 4.1 and 5.0 are recommended.
 #
+# Install the MySQL driver:
+#   gem install mysql
+# On MacOS X:
+#   gem install mysql -- --include=/usr/local/lib
+# On Windows:
+#   There is no gem for Windows.  Install mysql.so from RubyForApache.
+#   http://rubyforge.org/projects/rubyforapache
+#
+# And be sure to use new-style password hashing:
+#   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
+
+
 # Get the fast C bindings:
 #   gem install mysql
 #   (on OS X: gem install mysql -- --include=/usr/local/lib)
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
+
 mysql_example:
   adapter: mysql
   database: instiki_development
@@ -33,10 +40,10 @@ mysql_example:
   password:
   socket: /path/to/your/mysql.sock
 
-  # Connect on a TCP socket.  If omitted, the adapter will connect on the
-  # domain socket given by socket instead.
-  #host: localhost
-  #port: 3306
+# Connect on a TCP socket.  If omitted, the adapter will connect on the
+# domain socket given by socket instead.
+#host: localhost
+#port: 3306
   
 # Warning: The database defined as 'test' will be erased and
 # re-generated from your development database when you run 'rake'.
@@ -48,12 +55,13 @@ mysql_example:
   password:
   socket: /path/to/your/mysql.sock
 
-# PostgreSQL versions 7.4 - 8.1
+# PostgreSQL versions 7.4 - 8.2
 #
 # Get the C bindings:
 #   gem install postgres
-# or use the pure-Ruby bindings on Windows:
+# or use the pure-Ruby bindings (the only know way on Windows):
 #   gem install postgres-pr
+
 postgresql_example:
   adapter: postgresql
   database: instiki_development
