--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@
 
 development:
     adapter: sqlite3
-    database: db/development.db.sqlite3
+    database: db/development.db
 
 test:
     adapter: sqlite3
